Add: getCartItem controller and swagger documentation for this controller
