# src/config/swagger.yaml
@@ -186,6 +186,28 @@ paths:
                     type: string
                     description: The success message
 
+  /api/getCartItems:
+    get:
+      tags:
+        - Get Cart Items
+     
+      summary: Get Cart Items
+      description: This endpoint allows you to get cart items.
+      responses:
+        '200':
+          description: items ogs retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: The success message
+        '500':
+          description: Internal server error
+
+
 
   /api/postCart:
    post:
@@ -198,30 +220,29 @@ paths:
         application/json:
           schema:
             type: object
-            properties:
-              email:
-                type: string
-                description: The ID of the user
-                example: "123456"
-              cartItems:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    itemId:
-                      type: string
-                      description: The ID of the item to be added to cart
-                      example: "789012"
-                    size:
-                      type: string
-                      description: The size of the item to be added to cart
-                      example: "us10"
-                    quantity:
-                      type: number
-                      description: The quantity of the item to be added to cart
-                      example: 1
-    responses:
-      "200":
-        description: Item added successfully
-      "401":
-        description: Unauthorized - Title not found or item already exists
+properties:
+  email:
+    type: string
+    description: The ID of the user
+    example: "123456"
+  cartItems:
+    type: array
+    items:
+      type: object
+      properties:
+        itemId:
+          type: string
+          description: The ID of the item to be added to cart
+          example: "789012"
+        size:
+          type: string
+          description: The size of the item to be added to cart
+          example: "us10"
+        quantity:
+          type: number
+          description: The quantity of the item to be added to cart
+          example: 1
+
+
+
+  
